<resources>
    <string name="app_name">Travel Assistants</string>
    <string name="facebook_app_id">118711962110697</string>
    <string name="fb_login_protocol_scheme">fb118711962110697</string>
    <string name="api_maps">AIzaSyAfmqshBC86K-CHGjrr_Unt21QJDOnc5xA</string>

    //Font
    <string name="font_boto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_boto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_boto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_boto_bold_italic">fonts/Roboto-BoldItalic.ttf</string>
    <string name="font_boto_light">fonts/Roboto-Light.ttf</string>
    <string name="font_boto_light_italic">fonts/Roboto-LightItalic.ttf</string>
    <string name="font_boto_italic">fonts/Roboto-Italic.ttf</string>

    //Navigation bar main
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="type_sea">Du lịch biển</string>
    <string name="type_attractions">Thắng cảnh</string>
    <string name="type_cultural">Văn hóa</string>
    <string name="type_entertainment">Giải trí</string>
    <string name="type_spring">Mùa xuân</string>
    <string name="type_summer">Mùa hè</string>
    <string name="type_autumn">Mùa thu</string>
    <string name="type_winner">Mùa đông</string>
    <string name="txt_title_activity_login">Đăng nhập</string>
    <string name="txt_review">Đánh giá</string>
    <string name="top_hotel">Khách sạn gần đây</string>
    <string name="view_all">Tất cả</string>
    <string name="top_restaurent">Quán ăn gần đây</string>
    <string name="top_atm">ATM gần đây</string>
    <string name="rating_here">Đánh giá địa điểm này</string>
    <string name="title_rating">Đánh giá</string>
    <string name="hint_review">Cảm nhận của bạn về nơi đây!</string>
    <string name="btn_cancel">Đóng</string>
    <string name="btn_send">Gửi</string>
    <string name="remove_favorite">Đã xóa khỏi danh sách yêu thích</string>
    <string name="add_favorite">Đã thêm vào yêu thích</string>
    <string name="title_favorite">Địa điểm yêu thích</string>
    <string name="rating">Đánh giá</string>
    <string name="information">Thông tin chi tiết</string>
    <string name="message_enable_location">Couldn\'t get the location. Make sure location is enabled on the device</string>
    <string name="action_ok">OK</string>
    <string name="top_drinks">Quán nước gần đây</string>
    <string name="atm">Cây ATM</string>
    <string name="drinks">Quán nước</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="hotel">Khách sạn</string>
    <string name="gas_station">Cây xăng</string>
    <string name="hospital">Bệnh viện</string>
    <string name="top_hospital">Bệnh viện gần đây</string>
    <string name="top_gas_station">Cây xăng gần đây</string>
    <string name="no_place_near_hear">Không có địa điểm nào gần đây!</string>
    <string name="no_favorite">Bạn chưa có địa điểm yêu thích nào!</string>
    <string name="no_list_in_province">Danh sách chưa được cập nhật!</string>
    <string name="action_view_on_map">View maps</string>
    <string name="action_search">Search</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="menu_remove_reviews">Xóa</string>
    <string name="menu_edit_reviews">Sửa</string>
    <string name="no_place_search">Không tìm thấy kết quả tìm kiếm!</string>
    <string name="title_activity_schedule">Lịch trình của tôi</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="string_bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="action_schedule">Chọn</string>
    <string name="edit_schedule">Sửa lịch trình</string>
    <string name="delete_schedule">Xóa lịch trình</string>
    <string name="title_activity_schedule_place">SchedulePlaceActivity</string>

    <string name="read_more">mở rộng</string>
    <string name="read_less">đóng lại</string>
    <string name="txt_title_activity_about">About</string>
    <string name="about_author_description">I\'m 22 years old. I am a young software developer, I love music, video games and travel around the world. I also like to develop mobile software, especially for Android development.</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="about_special_thanks">Special thanks</string>
    <string name="about_special_thanks_members_sub">to Ms. <a href="https://www.facebook.com/nguyetthuan">Phan Nguyen Thuan</a> has guided me throughout the last time.</string>
    <string name="send_mail_error">Error!</string>

</resources>
