<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.tuankhai.travelassistants.fragment.SearchPlaceFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_drinks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/height_120dp"
                        android:layout_height="@dimen/height_120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_drinks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/drinks"
                        android:textAllCaps="false"
                        android:textColor="@color/global_white"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/height_120dp"
                        android:layout_height="@dimen/height_120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_restaurant" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/restaurant"
                        android:textAllCaps="false"
                        android:textColor="@color/global_white"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_atm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/height_120dp"
                        android:layout_height="@dimen/height_120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_atm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/atm"
                        android:textAllCaps="false"
                        android:textColor="@color/global_white"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_hotel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/height_120dp"
                        android:layout_height="@dimen/height_120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_hotel" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/hotel"
                        android:textAllCaps="false"
                        android:textColor="@color/global_white"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_40dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_gas_station"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/height_120dp"
                        android:layout_height="@dimen/height_120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_gas_station" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/gas_station"
                        android:textAllCaps="false"
                        android:textColor="@color/global_white"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_hospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/height_120dp"
                        android:layout_height="@dimen/height_120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_hospital" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/hospital"
                        android:textAllCaps="false"
                        android:textColor="@color/global_white"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_drinks"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_10dp"-->
        <!--android:layout_marginTop="@dimen/margin_10dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="@dimen/height_80dp"-->
        <!--android:layout_height="@dimen/height_80dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/icon_drinks" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_20dp"-->
        <!--android:text="@string/drinks"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/global_black"-->
        <!--android:textSize="@dimen/size_16sp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_restaurant"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_10dp"-->
        <!--android:layout_marginTop="@dimen/margin_10dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="@dimen/height_80dp"-->
        <!--android:layout_height="@dimen/height_80dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/icon_restaurant" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_20dp"-->
        <!--android:text="@string/restaurant"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/global_black"-->
        <!--android:textSize="@dimen/size_16sp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_hotel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_10dp"-->
        <!--android:layout_marginTop="@dimen/margin_10dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="@dimen/height_80dp"-->
        <!--android:layout_height="@dimen/height_80dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/icon_hotel" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_20dp"-->
        <!--android:text="@string/hotel"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/global_black"-->
        <!--android:textSize="@dimen/size_16sp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_atm"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_10dp"-->
        <!--android:layout_marginTop="@dimen/margin_10dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="@dimen/height_80dp"-->
        <!--android:layout_height="@dimen/height_80dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/icon_atm" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_20dp"-->
        <!--android:text="@string/atm"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/global_black"-->
        <!--android:textSize="@dimen/size_16sp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_gas_station"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_10dp"-->
        <!--android:layout_marginTop="@dimen/margin_10dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="@dimen/height_80dp"-->
        <!--android:layout_height="@dimen/height_80dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/icon_gas_station" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_20dp"-->
        <!--android:text="@string/gas_station"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/global_black"-->
        <!--android:textSize="@dimen/size_16sp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_hospital"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/margin_10dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="@dimen/height_80dp"-->
        <!--android:layout_height="@dimen/height_80dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/icon_hospital" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_20dp"-->
        <!--android:text="@string/hospital"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/global_black"-->
        <!--android:textSize="@dimen/size_16sp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--</LinearLayout>-->
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
